fix dark mode snack

--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -107,6 +107,7 @@
   --color-placeholder-background: #0f0b14;
   --color-spinner-light: white;
   --color-spinner-dark: #212529;
+  --color-snack-bg: var(--color-secondary);
 
   // Editor
   --color-editor-cursor: var(--color-text);
